# ai_interview_assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  env.example  eval_rag_report.json  pyproject.toml
.github/workflows/: ci.yml
data/: validation_conversation.jsonl  validation_retrieval.jsonl
data/raw/handbook/algorithms/: 01_algo-kak-polzovatsia-khendbukom.html  02_algo-kak-rabotat-s-sistemoi-proverki-zadanii.html  03_algo-vvedenie.html  04_algoritmy-i-slozhnost.html  05_odnosvyaznyj-spisok.html  06_mnozhestvo.html  07_slovar.html  08_dek-(veque-double-ended-queue).html  09_stek.html  10_ochered-s-prioritetom.html  11_chemu-vi-nauchilis-two.html  12_prakticheskie-zadaniya-s-avtomaticheskoj-proverkoj.html  13_zadacha-summa-dvuh-chisel.html  14_zadacha-maksimalnoe-proizvedenie.html  15_chemu-vi-nauchilis-thee.html  16_zadachi-o-chislah-fibonachchi.html  17_vychislenie-nok-i-nod.html  18_chemu-vi-nauchilis-four.html  19_priroda-grafa.html  20_predstavlenie-grafa-v-pamyati-kompyutera.html  21_obhody-grafa.html  22_algoritm-nahozhdeniya-komponent-svyaznosti-v-grafe.html  23_zadacha-poiska-kratchajshego-puti-v-grafe.html  24_chemu-vi-nauchilis-five.html  25_polnyj-perebor-i-optimizaciya-perebora.html  26_zhadnye-algoritmy.html  28_rekursivnye-algoritmy.html  (+26 more)
docs/: ci.md  data_pipeline.md  docker.md  eval_metrics.md
scripts/: init_data.sh
src/: config.py
src/bot/: admin.py  formatting.py  handlers.py  main.py
src/data_processing/: __init__.py  build_index.py  download_handbook.py  download_handbook_algo.py  download_handbook_cpp.py  download_handbook_cs.py  download_handbook_linux.py  download_handbook_math.py  download_handbook_ml.py  extract_handbook.py  extract_handbook_algo.py  extract_handbook_cpp.py  extract_handbook_cs.py  extract_handbook_linux.py  extract_handbook_math.py  extract_handbook_ml.py
src/eval/: dataset.py  metrics.py  run_eval.py  run_rag_eval.py
src/llm/: chains.py  memory.py  prompts.py  rag_engine.py
src/vector_store/: __init__.py  faiss_store.py
tests/: conftest.py  test_formatting.py  test_memory.py  test_metrics.py  test_rag_engine.py
tests/e2e/: test_rewrite_e2e.py
(+137 files in other folders)
