[project]
name = "ai-interview-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.23.0",
    "fastapi>=0.124.4",
    "mistralai>=1.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "E", # pycodestyle (error)
    "F", # Pyflakes
    "I", # isort
    "N", # pep8-naming
    "B", # black
    "W", # pycodestyle (warning)
]
ignore = [
    "N812",  # Example: Lowercase `functions` imported as non-lowercase `F`
    "N803",  # Argument name `X_train` should be lowercase
    "N806",  # Variable `X_train` in function should be lowercase
    "E501",  # Line too long
]
